--- a/web/package.json
+++ b/web/package.json
@@ -60,6 +60,7 @@
     "@types/react": "^17.0.28",
     "@types/uuid": "^8.3.1",
     "@types/yup": "^0.29.13",
+    "@types/zen-observable": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^10.0.0",
