--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,10 +6,10 @@
       "@components/*": ["components/*"],
       "@modules/*": ["modules/*"],
       "@store/*": ["store/*"],
-      "@theme/*": ["theme/*"],
       "@utils/*": ["utils/*"],
-      "@icons/*": ["icons/*"],
-      "@hooks/*": ["hooks/*"]
+      "@hooks/*": ["hooks/*"],
+      "@contexts/*": ["contexts/*"],
+      "@services/*": ["services/*"]
     },
     "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
@@ -21,7 +21,7 @@
     "downlevelIteration": true /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */,
     "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */,
     "strict": true /* Enable all strict type-checking options. */,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
     "noImplicitReturns": false /* Report error when not all code paths in function return a value. */,
