--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build-fragment": "node schemaQuery.js",
-    "predev": "npm run build-fragment",
     "start": "next start",
     "tsc-node": "tsc -p tsconfig.json",
     "lint:js": "eslint src --ext .ts --ext .tsx --fix",
@@ -17,7 +15,6 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run tsc-node && lint-staged"
     }
   },
   "lint-staged": {
@@ -37,6 +34,8 @@
     "@heroicons/react": "^1.0.4",
     "@hookform/resolvers": "^2.8.3",
     "axios": "^0.22.0",
+    "bnc-notify": "^1.9.1",
+    "bnc-onboard": "^1.35.4",
     "framer-motion": "^4.1.17",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
@@ -47,6 +46,7 @@
     "react": "^18.0.0-alpha-cb11155c8-20211112",
     "react-dom": "^18.0.0-alpha-cb11155c8-20211112",
     "react-hook-form": "^7.17.2",
+    "react-use": "^17.3.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.10"
   },
@@ -62,6 +62,7 @@
     "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.4.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
@@ -74,7 +75,9 @@
     "husky": "^4.3.8",
     "lint-staged": "^11.2.3",
     "npm-check-updates": "^11.8.5",
+    "postcss": "^8.4.4",
     "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.3"
   }
 }
